--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  provider: ^6.0.5
+  provider: ^6.1.1
   mobile_scanner: ^3.5.2
   flutter_svg: ^2.0.9
   remixicon: ^1.0.0
+  flutter_dotenv: ^5.1.0
+  http: ^1.1.0
+  image_picker: ^1.0.5
+  carousel_indicator: ^1.0.6
+  dotted_border: ^2.1.0
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +72,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - apikeys.env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -85,11 +92,10 @@ flutter:
         - asset: assets/fonts/Poppins-Italic.ttf
         - asset: assets/fonts/Poppins-Bold.ttf
           style: italic
-    # - family: Trajan Pro
-    #   fonts:
-    #     - asset: fonts/TrajanPro.ttf
-    #     - asset: fonts/TrajanPro_Bold.ttf
-    #       weight: 700
+          
+    - family: Inter
+      fonts:
+        - asset: assets/fonts/Inter-Regular.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
