--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   flutter_svg: ^2.0.9
   remixicon: ^1.0.0
   flutter_dotenv: ^5.1.0
-  http: ^1.1.0
+  http: ^0.13.5
   image_picker: ^1.0.5
   carousel_indicator: ^1.0.6
   dotted_border: ^2.1.0
@@ -49,6 +49,9 @@ dependencies:
   awesome_dialog: ^3.1.0
   gap: ^3.0.1
   cached_network_image: ^3.3.0
+  envied: ^0.5.2
+  awesome_snackbar_content: ^0.1.3
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +63,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  envied_generator: ^0.5.2
+  build_runner: ^2.4.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
