--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,6 +1,4 @@
-org.gradle.jvmargs=-Xmx1536M
+org.gradle.jvmargs=-Xmx4G
 android.useAndroidX=true
 android.enableJetifier=true
 dev.steenbakker.mobile_scanner.useUnbundled=true
-android.useAndroidX=true
-android.enableJetifier=true
