--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.1.1
-  mobile_scanner: ^3.5.2
+  mobile_scanner: ^3.5.5
   flutter_svg: ^2.0.9
   remixicon: ^1.0.0
   flutter_dotenv: ^5.1.0
@@ -52,6 +52,10 @@ dependencies:
   envied: ^0.5.2
   awesome_snackbar_content: ^0.1.3
   animated_text_kit: ^4.2.2
+  flutter_spinkit: ^5.2.0
+  shared_preferences: ^2.2.2
+  modal_progress_hud_nsn: ^0.4.0
+  lottie: ^2.7.0
 
 dev_dependencies:
   flutter_test:
