--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   shared_preferences: ^2.2.2
   modal_progress_hud_nsn: ^0.4.0
   lottie: ^2.7.0
+  loading_btn: ^1.0.3
 
 dev_dependencies:
   flutter_test:
