--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.1.1
-  mobile_scanner: ^3.5.5
+  mobile_scanner: 3.5.5
   flutter_svg: ^2.0.9
   remixicon: ^1.0.0
   flutter_dotenv: ^5.1.0
@@ -57,6 +57,9 @@ dependencies:
   modal_progress_hud_nsn: ^0.4.0
   lottie: ^2.7.0
   loading_btn: ^1.0.3
+  calendar_date_picker2: ^0.5.3
+  intl: ^0.18.1
+  pluto_grid: ^7.0.2
 
 dev_dependencies:
   flutter_test:
