--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.1.1
-  mobile_scanner: 3.5.5
+  mobile_scanner:
   flutter_svg: ^2.0.9
   remixicon: ^1.0.0
   flutter_dotenv: ^5.1.0
