--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,8 @@ dependencies:
   aws_s3_upload: ^1.5.0
   dio: ^5.4.0
   gtext: ^0.0.3
+  package_info_plus: ^5.0.1
+  url_launcher: ^6.2.4
 
 dev_dependencies:
   flutter_test:
