sales module revised

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,7 @@ description: A new Flutter project.
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
+#keep Flutter Version : Flutter 3.16.9, Dart Version: Dart 3.2.6
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
 # followed by an optional build number separated by a +.
@@ -36,7 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.1.1
-  mobile_scanner:
+  mobile_scanner: 3.5.5
   flutter_svg: ^2.0.9
   remixicon: ^1.0.0
   flutter_dotenv: ^5.1.0
