--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,6 @@ dependencies:
   gap: ^3.0.1
   cached_network_image: ^3.3.0
   envied: ^0.5.2
-  awesome_snackbar_content: ^0.1.3
   animated_text_kit: ^4.2.2
   flutter_spinkit: ^5.2.0
   shared_preferences: ^2.2.2
@@ -64,6 +63,7 @@ dependencies:
     sdk: flutter
   package_info_plus: ^5.0.1
   url_launcher: ^6.2.4
+  api_cache_manager: ^1.0.2
 
 dev_dependencies:
   flutter_test:
