--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,9 @@ dependencies:
   package_info_plus: ^5.0.1
   url_launcher: ^6.2.4
   api_cache_manager: ^1.0.2
+  auto_size_text: ^3.0.0
+  nepali_date_picker: ^6.0.0
+  # sqflite_common_ffi: ^2.3.2+1
 
 dev_dependencies:
   flutter_test:
